--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": "12.20"
   },
   "scripts": {
-    "build": "@tsc:compile",
+    "build": "npm run tsc:compile",
     "start": "nodemon src/server.ts",
     "tsc:compile": "tsc --project .",
     "tsc:watch": "tsc -w --project .",
@@ -20,14 +20,13 @@
   },
   "devDependencies": {
     "@types/express": "4.17.13",
-    "@types/file-type": "10.9.1",
     "@types/mime-types": "2.1.1",
     "express": "4.17.1",
     "file-type": "16.5.3",
     "http-status-codes": "2.1.4",
     "mime-types": "2.1.32",
-    "nodemon": "2.0.12",
     "npm-check-updates": "11.8.5",
+    "pm2": "5.1.2",
     "ts-node": "10.2.1",
     "tslib": "2.3.1",
     "typescript": "4.4.2"
